Fix scrollbars in Navigation & Notifications

--- a/js/src/app.css
+++ b/js/src/app.css
@@ -137,10 +137,6 @@ html {
     cursor: help;
 }
 
-.simplebar-scrollbar::before {
-    background: white !important;
-}
-
 /* Custom Switch */
 
 .custom-switch.switch-heading .custom-control-label:before {
@@ -158,10 +154,6 @@ html {
 
 form div.form-group.switch {
     margin-bottom: 0;
-}
-
-.custom-control-label {
-    vertical-align: -webkit-baseline-middle;
 }
 
 /* Custom React Tooltip */
